<resources>
    <string name="app_name">AcevedoMateus</string>
    <string name="txt_listado">Listado de productos</string>
    <string name="txt_detalle">Detalle Producto</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="crear">Crear</string>
    <string name="url_imagen">URL Imagen</string>
</resources>