<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularyActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="1000dp"
        android:layout_marginTop="32dp"
        android:background="@color/unab"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/tv_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="REGISTRO"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/precio"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_urlimagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/url_imagen"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/shape_button"
            android:onClick="clicGuardar"
            android:text="@string/crear" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>