<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="212dp"
        android:layout_height="132dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logounab" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="650dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/tv_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="LOGIN"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/correo_electronico"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_user_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/contrase_a"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/shape_button"
            android:onClick="clickIniciarSesion"
            android:text="@string/iniciar_sesi_n" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>